--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ a {
 .image img {
     width: 300px;
     height: 200px;
+    border-radius: 16px;
 }
 
 h1 {
@@ -61,4 +62,5 @@ button {
     border: none;
     border-radius: 16px;
     padding: 8px 16px;
+    margin: 12px 0;
 }
