--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ a {
     justify-content: space-between;
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 20px 160px 40px;
+    padding: 40px 160px 40px;
 }
 
 .image {
@@ -46,14 +46,19 @@ a {
 }
 
 .image img {
-    width: 300px;
+    width: 250px;
     height: 200px;
-    border-radius: 16px;
+    border-radius: 50%;
 }
 
 h1 {
+    font-size: 40px;
     margin: 0;
     padding: 0;
+}
+
+p {
+    font-size: 20px;
 }
 
 button {
@@ -63,4 +68,63 @@ button {
     border-radius: 16px;
     padding: 8px 16px;
     margin: 12px 0;
+    font-size: 20px;
+}
+
+.body2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+}
+
+.box-header {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.container {
+    display: flex;
+    padding: 0 160px;
+}
+
+.box-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box {
+    border: 6px solid #3882F6;
+    width: 200px;
+    height: 200px;
+    margin: 30px 16px 16px;
+    border-radius: 20px;
+}
+
+.text {
+    font-size: 20px;
+}
+
+.body3 {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    height: 200px;
+    margin: 40px 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    font-size: 40px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.quoter {
+    font-size: 25px;
+    padding-top: 16px;
+    padding-left: 650px;
 }
